# Toy-Compiler

./: .gitignore  CMakeLists.txt  README.md  download_dependencies.sh
include/: Ast_init.h  CodeGen_init.h  Dfa_init.h  Icg_init.h  Lexer_init.h  ParseTree_init.h  Parser_init.h  Semantic_init.h  Token_Data.h  Type_init.h  driver_init.h
src/: Ast_init.c  CodeGen_init.c  Dfa_init.c  Icg_init.c  Lexer_init.c  ParseTree_init.c  Parser_init.c  Semantic_init.c  Token_Data.c  Type_init.c  driver.c  driver_init.c  valangLexicalAnalyzer.c
